@startuml

interface Context{
setClock()
changeState()
callSecurityCenter()
recordLog()
}

class SafeFrame{
-state
setClock()
changeState()
callSecurityCenter()
recordLog()
}

interface State{
doClock()
doUse()
doAlarm()
doPhone()
}

class DayState{
-singleton
-DayState()
getInstance()
doClock()
doUse()
doAlarm()
doPhone()
}

class NightState{
-singleton
-NightState()
getInstance()
doClock()
doUse()
doAlarm()
doPhone()
}

SafeFrame ..|>Context
SafeFrame o->State
DayState -->State
NightState -->State

@enduml